v20.1/cockroachcloud-cluster-management.md
---
title: Cluster Management
summary: Manage your cluster's schema, data, and backups.
toc: true
build_for: [cockroachcloud]
---

This page describes the cluster management, backup/restore, and cluster deletion workflows.

## View Clusters page

On [logging in to the Console](cockroachcloud-create-your-account.html#log-in), the **Clusters** page is displayed. The **Clusters** page provides a high-level view of your clusters.

For each cluster, the following details display:

- The cluster's **Name**
- The **Version** of CockroachDB the cluster is running
- The number of **Nodes** in the cluster
- The date and time the cluster was **Created**

To view and manage a specific cluster, click the name of the cluster. The [**Overview**](#view-cluster-overview) page will display.

## View cluster overview

The **Cluster Overview** page displays a list of the selected cluster's nodes.

For each node, the page displays the node's `Name`, nested under its region.

From the **Cluster Overview** page, you can connect to your cluster. For more information, see [Connect to Your CockroachCloud Cluster](cockroachcloud-connect-to-your-cluster.html).

## Add or remove nodes from a cluster

You can add or remove nodes from your cluster through the Console.

{{site.data.alerts.callout_info}}
At this time, you cannot use the Console to scale up a single-node cluster or scale down to a single-node cluster. For single-node cluster changes, contact [Support](https://support.cockroachlabs.com).
{{site.data.alerts.end}}

### Considerations

- We recommend you add or remove nodes from a cluster when the cluster isn't experiencing heavy traffic. Adding or removing nodes incurs a non-trivial amount of load on the cluster. Changing the cluster configuration during times of heavy traffic can result in degraded application performance or longer times for node modifications. 
- If you have changed the [replication factor](configure-zone.html) for a cluster, you might not be able to remove nodes from the cluster. For example, suppose you have a 5-node cluster and you had previously changed the replication factor from its default value of 3 to 5. Now if you want to scale down the cluster to 3 nodes, the decommissioning nodes operation to remove nodes from the cluster might fail. To successfully remove nodes from the cluster, you will have to change the replication factor back to 3.
- Before removing nodes from a cluster, ensure that the reduced disk space will be sufficient for the existing and anticipated data.

To add or remove nodes from your cluster:

1. On the **Cluster Overview** page, from the **Actions** dropdown in the right corner, select **Add/remove nodes**. The **Edit <cluster name>** page is displayed.
2. From the **Nodes** dropdown, select the number of nodes you want in your cluster. Click **Next**.
3. On the **Summary** page, verify the hourly estimated cost for the cluster.
4. Click **Add/remove nodes**.

## Restore data from a backup

Cockroach Labs runs full backups daily and incremental backups hourly for every CockroachCloud cluster. The full backups are retained for 30 days and incremental backups for 7 days.

{{site.data.alerts.callout_info}}
All databases are not backed up at the same time. Each database is backed up every hour based on the time of creation. For larger databases, you might see an hourly CPU spike while the database is being backed up.
{{site.data.alerts.end}}

To restore your data, [contact us](https://support.cockroachlabs.com).

Additionally, you can [backup and restore](backup-and-restore.html) data on your own.

### Backup and restore from a self-hosted CockroachDB cluster

You can [backup](backup.html) your self-hosted CockroachDB databases to an [external location](backup.html#backup-file-urls) and then [restore](restore.html) to your CockroachCloud cluster.

{{site.data.alerts.callout_danger}}
If you are backing up the data to AWS or GCP, use the `specified` option for the `AUTH` parameter.
{{site.data.alerts.end}}

## Delete cluster

{{site.data.alerts.callout_danger}}
Deleting a cluster will delete all cluster data.
{{site.data.alerts.end}}

Proceed with the following steps only if you are sure you want to delete a cluster:

1. Navigate to the **Cluster Overview** page for the cluster you want to delete.
2. On the right-hand side, select **Delete cluster** from the **Actions** drop-down.
3. In the confirmation window, enter the name of the cluster and click **Delete**.
